// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings renders H1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 24.75px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 24.75px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 40.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 24.75px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 24.75px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: -0.5px;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 31.5px;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;
